# xapi-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-xapi-python.yml  upload-coverage.yml
examples/: get-all-symbols.py  get-balance.py  get-chart-last-request.ipynb  get-chart-range-request.ipynb  get-margin-level.ipynb  get-margin-level.py  get-profits.py  get-symbol.ipynb  get-symbol.py  get-tick-prices.py  get-trades-history.py  get-trading-hours.py  listen-balance.py  listen-candles.py  listen-tick-prices.py  trade-transaction.py
tests/: mock_server.py  test_connect.py  test_connection.py  test_socket.py  test_stream.py  test_xapi.py
xapi/: __init__.py  cli.py  connection.py  enums.py  exceptions.py  socket.py  stream.py  xapi.py
