[project]
name = "xapi-python"
version = "0.0.1"
authors = [
  { name="Paweł Knioła", email="pawel.kn@gmail.com" },
]
description = "The xStation5 API Python library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"