[project]
name = "xapi-python"
version = "0.2.0"
authors = [
  { name="Paweł Knioła", email="pawel@kniola.pl" },
]
description = "The xStation5 API Python library"
keywords = [
  "python", "python3", "bitcoin", "trading", "websocket", "trading-api", "forex", "xapi", "forex-trading",
  "exchange-api", "forex-data", "xstation", "xstation5", "xtb", "xopenhub", "forex-api", "xopenhub-api",
  "xtb-api", "xstation-api", "x-trade-brokers", "bfbcapital"
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",      #Specify which pyhton versions that you want to support
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "websockets>=11.0.2",
  "click>=8.1.8"
]

[project.urls]
"Homepage" = "https://github.com/pawelkn/xapi-python"
"Bug Tracker" = "https://github.com/pawelkn/xapi-python/issues"

[project.scripts]
xapi = "xapi.cli:cli"